# minidx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml
crates/minidx/: Cargo.toml  README.md
crates/minidx-core/: Cargo.toml
crates/minidx-core/src/: activation.rs  bias1d.rs  dtypes.rs  gradients.rs  iterate.rs  lib.rs  linear.rs  matmul.rs  misc.rs  modules.rs  optimizers.rs
crates/minidx-core/src/layers/: activation.rs  bias1d.rs  conv1d.rs  diag.rs  gate.rs  linear.rs  lr_modifier.rs  mod.rs  residual.rs  rmsdiv.rs  scalar_scale.rs  softmax.rs  swish.rs
crates/minidx-core/src/loss/: mod.rs
crates/minidx-core/src/ops/: add.rs  matmul.rs  mod.rs  negate.rs
crates/minidx-core/src/shapes/: axes.rs  broadcasts.rs  dim.rs  mod.rs  permutes.rs  replace_dim.rs  shape.rs  shapes_exp.rs  slice.rs
crates/minidx-core/src/tensor/: construct_traits.rs  destruct_traits.rs  mod.rs  view.rs
crates/minidx-vis/: Cargo.toml
crates/minidx-vis/src/: anim.rs  chart.rs  font.rs  lib.rs  network_traits.rs
crates/minidx/src/: layer_spec.rs  lib.rs  problem.rs  recorder.rs
crates/minidx/src/problem/: idx.rs  mnist.rs
crates/minidx/tests/: basic_vid.rs  mnist.rs  modular_addition.rs
