[workspace]
members = ["crates/minidx-core", "crates/minidx-vis", "crates/minidx"]
resolver = "2"

[workspace.dependencies]
num-traits = { version = "^0.2.17", default-features = false }
rand = { version = "^0.9.0", default-features = false, features = ["std_rng", "small_rng"] }
rand_distr = "^0.5"

minidx-core = { version = "0.1.1", path = "crates/minidx-core"}
minidx-vis = { version = "0.1.1", path = "crates/minidx-vis"}

raqote = { version = "^0.8", features = ["png"], default-features = false }
rust-fontconfig = { version = "^0.1" }
fontdue = { version = "^0.9" }