[package]
edition = "2021"
name = "minidx-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
default = ["gemm"]
gemm = ["dep:gemm", "dep:rayon"]

[dependencies]
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true

gemm = {version = "^0.18", optional = true}
rayon = {version = "^1", optional = true}