[package]
edition = "2021"
name = "minidx-core"
version = "0.1.10"
license = "MIT OR Apache-2.0"

rust-version = "1.78"

description = "Core crate for minidx, a simple + compile-time neural-network library."
homepage = "https://github.com/twitchyliquid64/minidx"
documentation = "https://docs.rs/minidx-core"
repository = "https://github.com/twitchyliquid64/minidx"

keywords = [
    "deep-learning",
    "neural-network",
    "backprop",
]

[features]
default = ["gemm", "serde"]
gemm = ["dep:gemm"]
serde = ["dep:serde"]

[dependencies]
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true

gemm = {version = "^0.18", optional = true}
serde = {workspace = true, optional = true}

# workaround for 1.9.2 needing 1.84
bytemuck_derive=">=1.8.1, <1.9.0"
