[package]
edition = "2021"
name = "minidx-vis"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
minidx-core.workspace = true
raqote.workspace = true
rust-fontconfig.workspace = true
fontdue.workspace = true

plotters = { version = "^0.3", default-features = false, features = ["bitmap_backend", "all_series"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
command-fds = "0.3"
os_pipe = "1.2"