[package]
edition = "2021"
name = "minidx-vis"
version = "0.1.0"
license = "MIT OR Apache-2.0"

description = "Visualization crate for minidx, a simple + compile-time neural-network library."
homepage = "https://github.com/twitchyliquid64/minidx"
documentation = "https://docs.rs/minidx-vis"
repository = "https://github.com/twitchyliquid64/minidx"

keywords = [
    "deep-learning",
    "neural-network",
    "backprop",
]

[dependencies]
minidx-core.workspace = true
raqote.workspace = true
rust-fontconfig.workspace = true
fontdue.workspace = true

plotters = { version = "^0.3", default-features = false, features = ["bitmap_backend", "all_series"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
command-fds = "0.3"
os_pipe = "1.2"