[package]
edition = "2021"
name = "minidx"
version = "0.1.1"
license = "MIT OR Apache-2.0"

description = "Simple, compile-time-sized neural networks."
homepage = "https://github.com/twitchyliquid64/minidx"
documentation = "https://docs.rs/minidx"
repository = "https://github.com/twitchyliquid64/minidx"

keywords = [
    "deep-learning",
    "neural-network",
    "backprop",
]

[features]
default = ["vis"]
vis = ["dep:minidx-vis"]

[dependencies]
minidx-core.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true

minidx-vis = {workspace = true, optional = true}